test node install

--- a/.github/workflows/second-action.yml
+++ b/.github/workflows/second-action.yml
@@ -10,8 +10,8 @@ jobs:
     #   Actions works with different keys. in this case we checkout our repo so i workflow can use our repo to run. So we add the "uses" key for the nuild in action
         uses: actions/checkout@v3
     #   You can add a "with" key if you want to checkout the repo with specific https://github.com/marketplace/actions/checkout
-      - name: actions/setup-node@v4
-        uses: echo "Completed"
+      - name: Install NodeJs
+        uses: actions/setup-node@v4
         with: 
           node-version: 18
       - name: Install dependencies
