--- a/.github/workflows/second-action.yml
+++ b/.github/workflows/second-action.yml
@@ -32,8 +32,26 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build project
-        run: npm run build    
-      
+        run: npm run build
+    # Adding a condition to run jobs after each other 
+  deploy2:    
+    needs: [nodetest,deploy]                  # adding second job
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get NodeJs package installation from repository 
+    #   Actions works with different keys. in this case we checkout our repo so i workflow can use our repo to run. So we add the "uses" key for the nuild in action
+        uses: actions/checkout@v3
+    #   You can add a "with" key if you want to checkout the repo with specific https://github.com/marketplace/actions/checkout
+      - name: Install NodeJs
+        uses: actions/setup-node@v4
+        with: 
+          node-version: 18
+      - name: Install dependencies
+        run: npm ci
+      - name: Build project
+        run: npm run build 
+      - name: Deploy project
+        run: echo "Deploying project"       
 
 
 
