--- a/.github/workflows/second-action.yml
+++ b/.github/workflows/second-action.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Run tests
         run: npm test 
   deploy:                      # adding second job
+    needs: nodetest
     runs-on: ubuntu-latest
     steps:
       - name: Get NodeJs package installation from repository 
